# Agent-Skill-Kit

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/: __init__.py  base.py
agents/antigravity/: adapter.py
agents/claude/: adapter.py
agents/codex/: adapter.py
agents/cursor/: adapter.py
agents/gemini/: adapter.py
ask/: __init__.py  __main__.py  cli.py
ask/commands/: __init__.py  add_agent.py  copy.py  create.py  list_skills.py  sync.py  update.py
ask/templates/skill/: README.md  skill.yaml
ask/utils/: __init__.py  agent_registry.py  filesystem.py  skill_registry.py  validators.py
skills/coding/ask-commit-assistance/: README.md  SKILL.md  skill.yaml
skills/coding/ask-effective-llm-coder/: SKILL.md  skill.yaml
skills/coding/ask-flutter-architect/: README.md  SKILL.md  skill.yaml
skills/coding/ask-flutter-mechanic/: README.md  SKILL.md  skill.yaml
skills/coding/bug-finder/: README.md  skill.yaml
skills/coding/code-reviewer/: SKILL.md  skill.yaml
skills/coding/python-refactor/: README.md  skill.yaml
skills/planning/ask-buildmaster/: README.md  skill.yaml
skills/planning/ask-project-memory/: README.md  skill.yaml
skills/tooling/add-agent/: README.md  skill.yaml
skills/tooling/ask-skill-capture/: README.md  skill.yaml
skills/tooling/skill-creator/: README.md  skill.yaml
workflows/skill-creator/: workflow.md
